--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="P.png" type="image/png">
 <title>Admin Portal</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
@@ -81,9 +82,9 @@ text-transform:uppercase;font-size:0.8rem;}
 </div>
 
 <script>
-const webAppURL = "https://script.google.com/macros/s/AKfycbzjD_JXiSuHnB9CTfe5MJ2WtWmP70570bcFAD_3Gq-50TCis6VhoJpo_2flco8f1ICqAA/exec"; // 🔹 Replace this
-const adminUsername = "admin";
-const adminPassword = "12345";
+const webAppURL = "https://script.google.com/macros/s/AKfycbwexeOz2IWXtxdQWtudtFuBQ8hPSOIBRTRL1_NV-n7a1OPQiI8myP5Yz3Fyr9bFG3aM/exec"; // 🔹 Replace this
+const adminUsername = "Perfect98cards";
+const adminPassword = "jaweed1968";
 
 function loginAdmin(){
   const user=document.getElementById("adminUser").value;
