--- a/index.html
+++ b/index.html
@@ -492,6 +492,8 @@ th {
   const webAppURL = "https://script.google.com/macros/s/AKfycbwexeOz2IWXtxdQWtudtFuBQ8hPSOIBRTRL1_NV-n7a1OPQiI8myP5Yz3Fyr9bFG3aM/exec";
   const adminUsername = "Perfect98cards";
   const adminPassword = "jaweed1968";
+  const adminUsername = "saivenkatadmin";
+  const adminPassword = "saivenkat";
 
   // Login functionality with enhanced UI
   document.getElementById('loginForm').addEventListener('submit', function(e) {
@@ -587,4 +589,5 @@ th {
 </script>
 </body>
 </html>
+
 
